# queue_fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  base.py  conf_manage.py  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
chat/: api.py  consumers.py  models.py  schemas.py
docs/: conf.py  index.rst  mongo_db.rst  queue_room.rst  user.rst
docs/_build/doctrees/: environment.pickle
docs/_build/html/: .buildinfo  base.html  chat.html  db.html  genindex.html  index.html  main.html  modules.html  mongo_db.html  objects.inv  py-modindex.html  queue_room.html  search.html  searchindex.js  user.html
docs/_build/html/_modules/: db.html  index.html
docs/_build/html/_modules/chat/: api.html  consumers.html  models.html  schemas.html
docs/_build/html/_modules/queue_room/: api.html  models.html  schemas.html
docs/_build/html/_modules/user/: api.html  jwt_bearer.html  jwt_handler.html  schemas.html
docs/_build/html/_sources/: chat.rst.txt  modules.rst.txt
migrations/: env.py
migrations/versions/: 08978f455105_create_table.py  44a9e8ec7a45_create_table.py
queue_room/: api.py  models.py  schemas.py
user/: api.py  jwt_bearer.py  jwt_handler.py  schemas.py
