[tool.poetry]
name = "queue_fastapi"
version = "0.1.0"
description = ""
authors = ["Blastz13 <sinicinr2003@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
